# do

./: .gitignore  Makefile  do.c  meson.build
src/: main.c
